# BASSC

./: CMakeLists.txt  StateChart.scxml  main.cpp
BASSC/: BASSC UI Design Plan.md  CMakeLists.txt  DELIVERY.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  UI_README.md  main.cpp
BASSC/BASSC_UI/: BASSC_UI.qmlproject  CMakeLists.txt  qds.cmake
BASSC/BASSC_UI/App/autogen/: environment.h
BASSC/BASSC_UI/BASSC_UI/: CMakeLists.txt  Constants.qml  qmldir
BASSC/BASSC_UI/BASSC_UI/designer/: plugin.metainfo
BASSC/BASSC_UI/BASSC_UIContent/: App.qml  CMakeLists.txt  Screen01.ui.qml
BASSC/libs/Project/: CMakeLists.txt
BASSC/libs/Project/include/: Project.h
BASSC/qml/: Main.qml
BASSC/qml/components/: ConfusionMatrix.qml  FileSelectionPanel.qml  SpectrogramViewer.qml  SymbolGrid.qml  TopMenuBar.qml
BASSC/qml/dialogs/: ProjectDialog.qml
BASSC/qml/pages/: ClassificationModelPage.qml  FileAnnotationPage.qml  ProjectSelectionPage.qml
BASSC/src/managers/: AudioManager.cpp  AudioManager.h  ModelManager.cpp  ModelManager.h  ProjectManager.cpp  ProjectManager.h  README.md
BASSUI/: BASSUI.qmlproject  BASSUI.qmlproject.qtds  CMakeLists.txt  qds.cmake
BASSUI/App/autogen/: environment.h
BASSUI/BASSUI/: CMakeLists.txt  Constants.qml
BASSUI/BASSUI/designer/: plugin.metainfo
BASSUI/BASSUIContent/: App.qml  CMakeLists.txt  ClassificationModelView.qml  CreateProjectDialog.qml  InfoView.qml  LoadingSplashScreen.qml  MainView.qml  NotesView.qml  ProjectLoadConfirmationDialog.qml  ProjectSelectWindow.qml  Screen01.qml  SignalInfoView.qml  SoundView.qml  SpectrogramViewSlop.qml  SyllableView.qml  UtilitiesView.qml
libs/ProjectCore/: CMakeLists.txt
libs/ProjectCore/include/ProjectCore/: Project.h  ProjectHandler.h
libs/ProjectCore/src/: Project.cpp  ProjectHandler.cpp
qml/: Main.qml
